fix spacing when deleting comments

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,14 +20,16 @@ body {
 #root {
     background: linear-gradient(orange, yellow, orangered)
 }
-.vote-container {
-   padding-bottom: auto;
-}
 .comments-container {
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 20px;
 }
-.card {
-    width: 100%;
+.vote-number {
+    font-size: 1rem;
+    color: black;
+}
+.delete-button {
+    text-decoration-color: red;
+    font-size: 1rem;
 }
